# ddr-p

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: readme.md
ddrp/: config.py  plot_utils.py
latex/: readme.md
notebooks/: config-test.md  ddrp.yaml  readme.md
tests/: test_config.py
utils/: __init__.py  example.py  plot_utils.py
