[tool.poetry]
name = "ddr-p"
version = "0.1.1"
description = "data-driven research papers, making use of Python and LaTeX for automation and reproducibility."
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]
packages = [
         { include = "ddrp" },
]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"
seaborn = "^0.11.1"
numpy = "^1.20.1"
dacite = "^1.6.0"
srsly = "^2.4.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
