[tool.poetry]
name = "ddr-p"
version = "0.2.0"
description = "data-driven research papers, making use of Python and LaTeX for automation and reproducibility."
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]
packages = [
         { include = "ddrp" },
]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"
seaborn = "^0.11.1"
numpy = "^1.20.1"
srsly = "^2.4.0"
pydantic = "^1.8.1"
Pint = "^0.17"

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.0.0"
hypothesis = "^6.10.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
